# epub2md-pandoc

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Launch epub2md.command  QUICKSTART.md  README.md  epub_text.py  epub_to_md_converter.py  gui.py  html_to_md_converter.py  install.bat  install.sh  make_app.sh  medium_scraper.py  pdf_to_md_converter.py  pyproject.toml  rag_distill.py  reddit_browser.py  requirements.txt  self_improve.py  version.py
.github/workflows/: ci.yml  self-improve.yml
sample-epubs-for-testing/: README.md
templates/: index.html
tests/: README.md  baselines.json  conftest.py  test_epub_text.py  test_gui_rag_status.py  test_html_encoding.py  test_html_pagination.py  test_html_reddit.py  test_rag_distill.py  test_regression.py  test_self_improve.py
